src/test/compile-fail/unique-mut.rs
//error-pattern:mismatched types
fn main() {
    let i: ~int = ~mutable 0;
}